ECL-1126_oai_harvesting_topology - topology assembly